Nickname form changes

--- a/nuzlocke.r/frontend/app/components/game/game.component.html
+++ b/nuzlocke.r/frontend/app/components/game/game.component.html
@@ -333,7 +333,7 @@
           </div>
 
           <div class="pokemon-meta">
-            <div class="met-location">Met in {{ pokemon.location }} | Info 🔗</div>
+            <div class="met-location">Met in {{ pokemon.location }}</div>
           </div>
           
           <div class="pokemon-actions">
